--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li class="dropdown-item" routerLink="/socios">Socios</li>
+            <li class="dropdown-item" routerLink="/barcos">Barcos</li>
+            <li class="dropdown-item" routerLink="/patrones">Patrones</li>
           </ul>
         </li>
         <li class="nav-item">
