--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="#">Contacto</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Acceso Socios</a>
+          <a class="nav-link" routerLink="/login">Acceso Socios</a>
         </li>
       </ul>
       <ul class="navbar-nav">
