--- a/src/app/components/patron/patron.component.css
+++ b/src/app/components/patron/patron.component.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 .background-image {
-  background-image: url('/assets/barco.png');
+  background-image: url('/assets/patron.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
