--- a/src/app/components/patron/patron.component.html
+++ b/src/app/components/patron/patron.component.html
@@ -54,8 +54,8 @@
           <td>{{ patron.nombre }}</td>
           <td>{{ patron.licencia }}</td>
           <td>
-            <button class="btn btn-warning btn-sm" (click)="selectPatron(patron)">Editar</button>
-            <button class="btn btn-danger btn-sm" (click)="deletePatron(patron.id)">Eliminar</button>
+            <button class="btn btn-warning btn-sm me-2" (click)="selectPatron(patron)">Editar</button>
+            <button class="btn btn-danger btn-sm " (click)="deletePatron(patron.id)">Eliminar</button>
           </td>
         </tr>
       </tbody>
