--- a/src/app/components/barco/barco.component.html
+++ b/src/app/components/barco/barco.component.html
@@ -91,7 +91,7 @@
             <td>{{ barco.cuotaAmarre }}</td>
             <td>{{ barco.socio?.nombre || 'Sin Socio' }} {{ barco.socio?.apellidos }}</td>
             <td>
-              <button class="btn btn-warning btn-sm" (click)="selectBarco(barco)">Editar</button>
+              <button class="btn btn-warning btn-sm me-2" (click)="selectBarco(barco)">Editar</button>
               <button class="btn btn-danger btn-sm" (click)="deleteBarco(barco.id)">Eliminar</button>
             </td>
           </tr>
