--- a/src/app/components/socios/socios.component.html
+++ b/src/app/components/socios/socios.component.html
@@ -23,7 +23,7 @@
               </ul>
             </td>
             <td>
-              <button class="btn btn-primary btn-sm me-2" (click)="editSocio(socio)" data-bs-toggle="modal" data-bs-target="#editSocioModal">Editar</button>
+              <button class="btn btn-primary btn-sm me-2 mb-2" (click)="editSocio(socio)" data-bs-toggle="modal" data-bs-target="#editSocioModal">Editar</button>
               <button class="btn btn-danger btn-sm " (click)="deleteSocio(socio.id)">Eliminar</button>
 
             </td>
