--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
       </div>
       <button type="submit" class="btn">Iniciar sesión</button>
     </form>
-    <a href="#" class="forgot-password">¿Ha olvidado su contraseña?</a>
+    <a routerLink="/password-recovery" class="forgot-password">¿Ha olvidado su contraseña?</a>
     <button class="btn signup" (click)="onSignup()">Solicitud de Alta (Sólo socios)</button>
   </div>
 </div>
