--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">El Club</a>
+          <a class="nav-link" routerLink="/club">El Club</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -30,7 +30,7 @@
           <a class="nav-link" href="#">Noticias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
+          <a class="nav-link" routerLink="/contacto">Contacto</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Acceso Socios</a>
