--- a/src/app/components/password-recovery/password-recovery.component.html
+++ b/src/app/components/password-recovery/password-recovery.component.html
@@ -1,11 +1,13 @@
-<div class="password-recovery-container">
-    <h2>Recuperar Contraseña</h2>
-    <form [formGroup]="recoveryForm" (ngSubmit)="onSubmit()">
-      <div>
-        <label for="email">Correo Electrónico:</label>
-        <input id="email" formControlName="email" type="email" required />
+<div class="password-recovery-container container mt-5">
+  <h2 class="text-center mb-4">Recuperar Contraseña</h2>
+  <form [formGroup]="recoveryForm" (ngSubmit)="onSubmit()" class="needs-validation" novalidate>
+    <div class="form-group">
+      <label for="email">Correo Electrónico:</label>
+      <input id="email" formControlName="email" type="email" class="form-control" required />
+      <div class="invalid-feedback">
+        Por favor, ingrese un correo electrónico válido.
       </div>
-      <button type="submit" [disabled]="recoveryForm.invalid">Enviar</button>
-    </form>
-  </div>
-  
+    </div>
+    <button type="submit" class="btn btn-primary btn-block mt-3" [disabled]="recoveryForm.invalid">Enviar</button>
+  </form>
+</div>
