--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Noticias</a>
+          <a class="nav-link" routerLink="noticias">Noticias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/contacto">Contacto</a>
@@ -38,13 +38,13 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Transparencia</a>
+          <a class="nav-link"routerLink="transparencia">Transparencia</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Perfil Contratante</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cita Previa</a>
+          <a class="nav-link" routerLink="cita">Cita Previa</a>
         </li>
       </ul>
     </div>
