--- a/src/app/components/club/club.component.html
+++ b/src/app/components/club/club.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="button-container">
-      <button class="large-button">Natación</button>
+      <button class="large-button" (click)="navigateTo('natacion')">Natación</button>
       <button class="large-button" (click)="navigateTo('gimnasio')">Gimnasio</button>
-      <button class="large-button">Tenis</button>
+      <button class="large-button" (click)="navigateTo('tenis')">Tenis</button>
     </div>
   </div>
