--- a/src/app/components/gimnasio/gimnasio.component.html
+++ b/src/app/components/gimnasio/gimnasio.component.html
@@ -1,11 +1,13 @@
 <div class="container" *ngIf="!reservationConfirmed">
-  <h1>Reserva de clases</h1>
+  <h1>Reserva de clases Gimnasio</h1>
   <mat-form-field appearance="fill">
     <mat-label>Selecciona una fecha</mat-label>
     <input matInput [matDatepicker]="picker" placeholder="Elige una fecha" (dateChange)="onDateChange($event)">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
+  <button mat-raised-button color="primary" (click)="goToHome('club')">Volver a Inicio</button>
+
 
   <div *ngIf="selectedDate">
     <h2>Horas disponibles</h2>
@@ -20,4 +22,6 @@
 
 <div class="confirmation-message" *ngIf="reservationConfirmed">
   <h1>{{ reservationMessage }}</h1>
+  <button mat-raised-button color="primary" (click)="goToHome('club')">Volver a Inicio</button>
+
 </div>
