--- a/src/app/components/gimnasio/gimnasio.component.html
+++ b/src/app/components/gimnasio/gimnasio.component.html
@@ -1,19 +1,21 @@
 <div class="container" *ngIf="!reservationConfirmed">
-  <h1>Reserva de clases Gimnasio</h1>
+  <h1>Reserva de plazas del Gimnasio</h1>
   <mat-form-field appearance="fill">
     <mat-label>Selecciona una fecha</mat-label>
     <input matInput [matDatepicker]="picker" placeholder="Elige una fecha" (dateChange)="onDateChange($event)">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="goToHome('club')">Volver a Inicio</button>
 
+  <button mat-raised-button color="primary" (click)="goToHome('club')">Volver a Inicio</button>
 
   <div *ngIf="selectedDate">
     <h2>Horas disponibles</h2>
     <mat-radio-group [(ngModel)]="selectedHour">
-      <div *ngFor="let hour of availableHours">
-        <mat-radio-button [value]="hour">{{ hour }}</mat-radio-button>
+      <div *ngFor="let slot of availableTimeGym">
+        <mat-radio-button [value]="slot.hour" [disabled]="slot.availableSeats <= 0">
+          {{ slot.hour }} ({{ slot.availableSeats }} plazas disponibles)
+        </mat-radio-button>
       </div>
     </mat-radio-group>
     <button mat-raised-button color="primary" (click)="confirmReservation()" [disabled]="!selectedHour">Confirmar Reserva</button>
@@ -23,5 +25,4 @@
 <div class="confirmation-message" *ngIf="reservationConfirmed">
   <h1>{{ reservationMessage }}</h1>
   <button mat-raised-button color="primary" (click)="goToHome('club')">Volver a Inicio</button>
-
 </div>
