--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,35 @@
+<!--<div class="contacto">
+  <div class="container mt-5">
+    <h2>Contacto</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <form (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" class="form-control" required [(ngModel)]="contact.name" name="name">
+          </div>
+          <div class="form-group">
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" class="form-control" required [(ngModel)]="contact.email" name="email">
+          </div>
+          <div class="form-group">
+            <label for="message">Mensaje:</label>
+            <textarea id="message" class="form-control" rows="5" required [(ngModel)]="contact.message" name="message"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <h3>Información de Contacto</h3>
+        <p><strong>Dirección:</strong> Calle Falsa 123, Santa Cruz de Tenerife, España</p>
+        <p><strong>Teléfono:</strong> +34 922 123 456</p>
+        <p><strong>Correo Electrónico:</strong> infonauticotenerife.com</p>
+      </div>
+    </div>
+  </div>
+</div>
+-->
+
 <div class="contacto">
   <div class="container mt-5">
     <h2>Contacto</h2>
